--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
     "vlucas/phpdotenv": "^3.4",
     "jeyroik/extas-repositories-mongo": "1.*",
     "phpstan/phpstan": "0.*",
-    "jeyroik/extas-snuffbox": "0.*"
+    "jeyroik/extas-snuffbox": "0.*",
+    "jeyroik/extas-snuffbox-conditions": "0.*"
   },
   "autoload": {
     "psr-4": {
