--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,9 @@
     "jeyroik/extas-repositories-fields-sample-names": "0.*",
     "jeyroik/extas-repositories-fields-uuid": "0.*",
     "jeyroik/extas-foundation": "5.*",
-    "jeyroik/extas-conditions": "0.*"
+    "jeyroik/extas-conditions": "0.*",
+    "jeyroik/extas-repositories": "0.*",
+    "jeyroik/extas-installer-plugins": "0.*"
   },
   "require-dev": {
     "phpunit/phpunit": "^9",
